<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.roberto.buenosdiasbebe.activities.MainActivity"
    android:background="@drawable/fondo_activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icono"
            android:scaleType="fitCenter"
            android:layout_gravity="left"
            android:id="@+id/toolbar_image"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_app"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="25dp"
            android:id="@+id/titulo_app"></TextView>

</android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/texto_uso_aplicacion"
        android:text="@string/uso_app"
        android:textColor="#000000"
        android:layout_marginTop="20sp"
        android:textSize="15dp"
        android:layout_below="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/texto_uso_aplicacion"
        android:layout_marginTop="55sp"
        android:id="@+id/layout_ajustes"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imagen_ajustes"
            android:src="@drawable/ajustes"
            android:layout_marginRight="23dp"
            />

        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imagen_ajustes"
            android:layout_below="@+id/texto_uso_aplicacion"
            android:background="@drawable/boton_redondeado"
            android:text="@string/ajustes"
            android:id="@+id/boton_ajustes"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layout_ajustes"
        android:layout_marginTop="35sp"
        android:id="@+id/layout_historico"
        >

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imagen_historico"
            android:src="@drawable/historico"
            android:layout_marginRight="23dp"
            />

        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imagen_ajustes"
            android:layout_below="@+id/texto_uso_aplicacion"
            android:background="@drawable/boton_redondeado"
            android:text="@string/historico"
            android:id="@+id/boton_historico"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_boton_programar_alarma"
        android:orientation="horizontal"
        android:layout_marginTop="340dp"
        >


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imagen_alarma"
            android:src="@drawable/alarma"
            android:layout_marginRight="23dp"
            />


        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imagen_ajustes"
            android:layout_below="@+id/texto_uso_aplicacion"
            android:background="@drawable/boton_redondeado"
            android:text="@string/literal_programar_alarma"
            android:id="@+id/boton_programar_alarma"
            android:onClick="programarAlarma"
            />

    </LinearLayout>













</RelativeLayout>
