<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_activity"
    tools:context="com.roberto.buenosdiasbebe.activities.AjustesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icono"
            android:scaleType="fitCenter"
            android:layout_gravity="left"
            android:id="@+id/toolbar_image"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_app"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="25dp"
            android:id="@+id/titulo_app"></TextView>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_habilitacion_notif"
        android:orientation="horizontal"
        android:layout_marginTop="125dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/literal_notificaciones"
            android:textColor="#000000"
            android:id="@+id/texto_ajuste_notificaciones"
            android:layout_marginLeft="10dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/check_habilitar_notif"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_hora_alarma"
        android:orientation="horizontal"
        android:layout_marginTop="190dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/texto_hora_alarma"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:text="@string/literal_hora_alarma"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/caja_hora_alarma"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:onClick="mostrarDialogHora"
            android:text="----"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_boton_guardar_ajustes"
        android:orientation="horizontal"
        android:layout_marginTop="300dp"
        >

        <Button
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imagen_ajustes"
            android:layout_below="@+id/texto_uso_aplicacion"
            android:background="@drawable/boton_redondeado"
            android:text="@string/literal_guardar_ajustes"
            android:id="@+id/boton_guardar_ajustes"
            android:layout_marginLeft="70dp"
            android:onClick="guardarAjustes"
            />

    </LinearLayout>





</RelativeLayout>
